<resources>
    <string name="app_name">AmbulanceMobi</string>
    <string name="title_activity_maps">Map</string>
    <string name="ambulance_tracker">Ambulance Tracker</string>
    <string name="create_an_account">Create An Account</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="call_ambulance">CALL AMBULANCE</string>
    <string name="logout">LOGOUT</string>
    <string name="settings">SETTINGS</string>
    <string name="your_name">your Name</string>
    <string name="your_phone_number">your Phone Number</string>
    <string name="change_picture">Change Picture</string>
    <string name="click_here">Click here</string>
    <string name="login">LogIn</string>
    <string name="client_log_in">Client Log In</string>
    <string name="dont_have_account">Dont Have Account?</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_phone_number">Patient Phone Number</string>
    <string name="todo">TODO</string>
    <string name="ambulancemobi">AmbulanceMobi</string>
    <string name="client_register">Client Register</string>
    <string name="phone">Phone</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="driver">DRIVER</string>
    <string name="client">CLIENT</string>
    <string name="todo1">TODO</string>
    <string name="customer_name">Customer Name</string>
    <string name="customerv_phone_number">Customerv Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="ambulance_number">Ambulance Number</string>
    <string name="name">Name</string>
    <string name="close">close</string>
    <string name="save">save</string>
</resources>
