<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="409dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#900200">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:layout_width="389dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/audiowide"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"

                    />

                <ImageView
                    android:id="@+id/close_button"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="37dp"
                    android:layout_marginLeft="37dp"
                    android:layout_marginEnd="43dp"
                    android:layout_marginRight="43dp"
                    android:layout_marginBottom="18dp"
                    android:contentDescription="@string/close"
                    android:src="@drawable/ic_close" />

                <ImageView
                    android:id="@+id/save_button"
                    android:layout_width="35dp"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="47dp"
                    android:layout_marginRight="47dp"
                    android:layout_marginBottom="18dp"
                    android:contentDescription="@string/save"
                    android:src="@drawable/ic_check" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/app_bar_settings"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_user"
        app:civ_border_color="#c880ff"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_settings"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/change_picture_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:text="@string/change_picture"
        android:fontFamily="@font/audiowide"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        app:layout_constraintVertical_bias="0.051" />


    <EditText
        android:id="@+id/name"
        android:layout_width="295dp"
        android:layout_height="46dp"
        android:layout_below="@+id/change_picture_btn"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="textPersonName|text"
        android:textColorHint="@color/colorPrimaryDark"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_picture_btn"
        app:layout_constraintVertical_bias="0.116" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="295dp"
        android:layout_height="46dp"
        android:layout_below="@+id/name"
        android:hint="@string/phone_number"
        android:background="@drawable/custom_button"
        android:inputType="number|phone"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.085"
        android:autofillHints="" />

    <EditText
        android:id="@+id/driver_car_name"
        android:layout_width="295dp"
        android:layout_height="46dp"
        android:layout_below="@+id/phone_number"
        android:autofillHints=""
        android:hint="@string/ambulance_number"
        android:inputType="number"
        android:textColorHint="@color/colorPrimaryDark"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number"
        app:layout_constraintVertical_bias="0.147" />

</androidx.constraintlayout.widget.ConstraintLayout>